# documenso

./: .cursorrules  .dockerignore  .env  .env.backup  .env.example  .env.gitpod  .eslintignore  .eslintrc.cjs  .gcloudignore  .gitignore  .gitmodules  .gitpod.yml  .npmrc  .opencommit-commitlint  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .yamllint.yml  AGENTS.md  ARCHITECTURE.md  BUSINESS_DOCUMENTATION.md  CLA.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FORK_WORKFLOW.md  GLOBAL_WEBHOOK.md  MAKEFILE.md  MANIFEST.md  Makefile  NEW_FEATURES.md  OAUTH_IMPLEMENTATION_SUMMARY.md  PLACEHOLDER.md  QUICK_REFERENCE.md  README.md  README_SUITEOP.md  SECURITY.md  (+47 more)
.aws/: uat-task-definition.json
.changeset/: config.json  fresh-gorillas-walk.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  on-create.sh  post-start.sh
tools/upstream-sync/: .gitignore  Jenkinsfile  README.md  config.yaml  pyproject.toml  requirements.txt
tools/upstream-sync/branding_resolver/: __init__.py  __main__.py  agent.py  binary_handler.py  classifier.py  confidence.py  config.py  deterministic.py  differ.py  exceptions.py  model_client.py  output.py  post_review.py  rate_limiter.py  repair_loop.py  resolution_cache.py  resolver.py  tool_executor.py  tsc_validator.py  validator.py
tools/upstream-sync/tests/: conftest.py  test_classify_and_resolve.py  test_cli.py  test_deterministic.py  test_tool_executor.py  test_validator_branding.py  test_workflow_e2e.py
tools/upstream-sync/tests/fixtures/: mock_api_responses.py
(+2809 files in other folders)
